<resources>
    <string name="app_name">Fernsteuerung</string>
    <string name="baseurl">https://146programming.de/fernsteuerung/</string>

    <string name="command_log">command log</string>
    <string name="command">command</string>

    <string name="strg">STRG</string>
    <string name="strgRelease">STRG-RELEASE</string>
    <string name="alt">ALT</string>
    <string name="altRelease">ALT-RELEASE</string>
    <string name="windows">WINDOWS</string>
    <string name="windowsRelease">WINDOWS-RELEASE</string>
    <string name="slash">/</string>
    <string name="slash2">SLASH</string>
    <string name="send">send</string>
    <string name="settings">settings</string>

    <string name="save">save</string>
    <string name="addressee">Addressee</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="refresh">refresh</string>
    <string name="author">author</string>
</resources>
